--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "piston",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "A route/path storing and parsing engine",
   "main": "index.js",
   "scripts": {
@@ -28,7 +28,7 @@
     "expect.js": "~0.2.0"
   },
   "dependencies": {
-    "pathetic": "~0.1.0",
+    "pathetic": "0.2.x",
     "as-array": "~0.1.1",
     "drainer": "~0.2.1"
   }
